// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Listen A11y I can see the skip to content link 1`] = `"உள்ளடக்கத்துக்குத் தாண்டிச் செல்க"`;

exports[`Canonical Listen Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Listen Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Listen Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "87",
  },
  {
    "p": "tamil.listen.cw3xlkprxv82o.page",
  },
  {
    "x1": "[urn:bbc:optimo:asset:cw3xlkprxv82o]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-tamil]",
  },
  {
    "x4": "[ta]",
  },
  {
    "x7": "[article-sfv]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Sound%20Effect]",
  },
  {
    "x11": "[2026-08-12T12:33:08.756Z]",
  },
  {
    "x12": "[2026-08-12T12:33:08.756Z]",
  },
]
`;

exports[`Canonical Listen Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, தமிழ்",
  "url": "/tamil",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 2`] = `
{
  "text": "நீங்கள் ஏன் பிபிசி மீது நம்பிக்கை வைக்க முடியும்?",
  "url": "https://www.bbc.com/tamil/institutional-50288575",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 3`] = `
{
  "text": "பயன்பாட்டு விதி",
  "url": "https://www.bbc.com/tamil/institutional-37286680",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 4`] = `
{
  "text": "பிபிசி பற்றி",
  "url": "https://www.bbc.com/tamil/institutional-37286682",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 5`] = `
{
  "text": "தனியுரிமை கொள்கை",
  "url": "https://www.bbc.com/tamil/articles/cgme0ml382zo",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 6`] = `
{
  "text": "குக்கிகள்",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 7`] = `
{
  "text": "பிபிசியுடன் தொடர்பு கொள்ள",
  "url": "https://www.bbc.co.uk/tamil/send/u50853753",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 8`] = `
{
  "text": "பிபிசி நியூஸ் பிற மொழிகளில்",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 9`] = `
{
  "text": "வெளியார் இணைப்புகள் தொடர்பான எங்கள் அணுகுமுறையைப் பற்றி படிக்கவும்.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Listen Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/tamil"`;

exports[`Canonical Listen Footer Paragraphs should match text 1`] = `"இது, பிபிசிக்காக கலெக்டிவ் நியூஸ்ரூம் வெளியீடு"`;

exports[`Canonical Listen Footer Paragraphs should match text 2`] = `"© 2026 பிபிசி. வெளியார் இணைய தளங்களின் உள்ளடக்கத்துக்கு பிபிசி பொறுப்பாகாது. வெளியார் இணைப்புகள் தொடர்பான எங்கள் அணுகுமுறையைப் பற்றி படிக்கவும்."`;

exports[`Canonical Listen Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, தமிழ்",
  "svg": <path
    d="M759.927 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.489-36.2v73.441h-22.003V159.451h23.192a2668.556 2668.556 0 0123.713 36.053 2774.159 2774.159 0 0123.267 36.646v-72.699h22.003V265.75h-23.193zM804.186 159.451h73.146v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.074v19.03h-75.97V159.45zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.979 3159.855 3159.855 0 01-9.44-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.069-35.63-13.231-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.771 40.586 3259.894 3259.894 0 0018.881-77.456h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.624-39.843 1455.41 1455.41 0 007.73-40.438h24.53a1845.28 1845.28 0 01-13.23 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 267.98c-5.849 0-11.62-.646-17.32-1.933a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.748 9.663 6.739 0 11.868-1.138 15.387-3.419 3.517-2.279 5.278-5.45 5.278-9.515 0-3.07-.869-5.475-2.602-7.21-1.735-1.733-4.04-3.122-6.913-4.163-2.876-1.04-6.096-2.007-9.663-2.899-5.85-1.387-11.002-2.973-15.462-4.757-4.46-1.784-8.228-3.889-11.299-6.319-3.073-2.427-5.403-5.352-6.987-8.771-1.587-3.42-2.38-7.508-2.38-12.265 0-6.74 1.71-12.537 5.13-17.395 3.42-4.855 8.25-8.597 14.495-11.224 6.244-2.625 13.678-3.94 22.3-3.94 5.65 0 11.2.646 16.651 1.933 5.45 1.289 10.356 3.024 14.719 5.203v20.22c-4.363-2.677-9.292-4.758-14.793-6.245-5.5-1.487-11.027-2.23-16.577-2.23-6.046 0-10.73 1.04-14.048 3.122-3.322 2.081-4.981 5.055-4.981 8.92 0 2.776.792 4.98 2.378 6.616 1.585 1.635 3.84 2.974 6.765 4.014 2.922 1.04 6.367 2.058 10.333 3.047 5.054 1.29 9.76 2.703 14.123 4.238 4.36 1.538 8.2 3.493 11.522 5.872 3.32 2.379 5.895 5.403 7.73 9.069 1.834 3.668 2.75 8.177 2.75 13.529 0 7.038-1.734 13.06-5.202 18.063-3.47 5.006-8.475 8.823-15.016 11.448s-14.42 3.94-23.638 3.94z"
  />,
}
`;

exports[`Canonical Listen Header Navigation link should match text and url 1`] = `
{
  "text": "முகப்பு",
  "url": "/tamil",
}
`;

exports[`Canonical Listen Image Caption should match text 1`] = `"கேட்பொலிக் குறிப்பு, Test Audio For Optimo"`;

exports[`Canonical Listen Image should match snapshot 1`] = `
<noscript>
  <div>
    <div
      class="css-nsgrcm"
    >
      <strong
        class="css-pow7hy"
      >
        ஒலிபரப்பு மென்பொருள் உங்கள் கணினியில் இல்லை
      </strong>
    </div>
  </div>
</noscript>
`;

exports[`Canonical Listen Main heading should match text 1`] = `"Tamil - Listen - Test Audio For Optimo"`;

exports[`Canonical Listen Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-1okmog4"
  data-e2e="media-loader__container"
>
  <div
    class="css-8432in"
    data-simorgh-media-loader="inactive"
  >
    <div
      class="media-player css-9p9hvp"
      data-e2e="media-player"
    >
      <noscript>
        <div>
          <div
            class="css-nsgrcm"
          >
            <strong
              class="css-pow7hy"
            >
              ஒலிபரப்பு மென்பொருள் உங்கள் கணினியில் இல்லை
            </strong>
          </div>
        </div>
      </noscript>
    </div>
  </div>
  <figcaption
    class="css-xe4jyu"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="css-5ku87v"
      >
        கேட்பொலிக் குறிப்பு, 
      </span>
      <span
        data-testid="caption-paragraph"
      >
        Test Audio For Optimo
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/tamil/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/tamil/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/tamil/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/tamil/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/tamil/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Listen SEO Canonical link 1`] = `"http://localhost:7081/tamil/listen/cw3xlkprxv82o"`;

exports[`Canonical Listen SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Listen SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Listen SEO Heading level 1 1`] = `"Tamil - Listen - Test Audio For Optimo"`;

exports[`Canonical Listen SEO Lang attribute 1`] = `"ta"`;

exports[`Canonical Listen SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/tamil/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News தமிழ்",
        "noBylinesPolicy": "https://www.bbc.com/tamil/institutional-50288575#authorexpertise",
      },
      "dateModified": "2026-08-12T12:33:08.756Z",
      "datePublished": "2026-08-12T12:33:08.756Z",
      "headline": "Sound Effect",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_tamil/p01vkjg8.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ta",
        "name": "Tamil",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/tamil/listen/cw3xlkprxv82o",
        "@type": "WebPage",
        "name": "Sound Effect",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/tamil/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News தமிழ்",
        "publishingPrinciples": "https://www.bbc.com/tamil/institutional-50288575",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_tamil/p01vkjg8.png",
      "url": "http://localhost:7081/tamil/listen/cw3xlkprxv82o",
    },
  ],
}
`;

exports[`Canonical Listen SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "AudioObject",
  "description": "Sound Effect",
  "duration": "PT3S",
  "embedURL": "https://www.test.bbc.com/ws/av-embeds/articles/cw3xlkprxv82o/p01w99jg/ta",
  "name": "Test Audio For Optimo",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01vkjg8.png",
  "uploadDate": "2024-10-03T10:23:31.000Z",
}
`;

exports[`Canonical Listen SEO OG description 1`] = `"Sound Effect"`;

exports[`Canonical Listen SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_tamil/p01vkjg8.png"`;

exports[`Canonical Listen SEO OG image alt 1`] = `"BBC flat logo 2023 default image"`;

exports[`Canonical Listen SEO OG locale 1`] = `"ta-IN"`;

exports[`Canonical Listen SEO OG site name 1`] = `"BBC News தமிழ்"`;

exports[`Canonical Listen SEO OG title 1`] = `"Sound Effect - BBC News தமிழ்"`;

exports[`Canonical Listen SEO OG type 1`] = `"article"`;

exports[`Canonical Listen SEO OG url 1`] = `"http://localhost:7081/tamil/listen/cw3xlkprxv82o"`;

exports[`Canonical Listen SEO Page title 1`] = `"Sound Effect - BBC News தமிழ்"`;

exports[`Canonical Listen SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Listen SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Listen SEO Twitter creator 1`] = `"@bbctamil"`;

exports[`Canonical Listen SEO Twitter description 1`] = `"Sound Effect"`;

exports[`Canonical Listen SEO Twitter image alt 1`] = `"BBC flat logo 2023 default image"`;

exports[`Canonical Listen SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_tamil/p01vkjg8.png"`;

exports[`Canonical Listen SEO Twitter site 1`] = `"@bbctamil"`;

exports[`Canonical Listen SEO Twitter title 1`] = `"Sound Effect - BBC News தமிழ்"`;

exports[`Canonical Listen Timestamp should match text and date 1`] = `
{
  "date": "2026-08-12",
  "text": "12 ஆகஸ்ட் 2026",
}
`;
